# mtdalgos

./: Cargo.toml  LICENSE
src/: lib.rs
src/dijkstra/: complex.rs  mod.rs  simple.rs
src/macros/: errconvert.rs  mod.rs
src/pool/: mod.rs
